--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "git-interactive-checkout": "lib/gic.js"
   },
   "scripts": {
-    "test": "tsc && ava",
+    "test": "nyc ava",
     "build": "tsc",
     "start": "ts-node src/gic.ts"
   },
@@ -21,9 +21,12 @@
     "simple-git": "^1.92.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "0.1.3",
     "@types/node": "12.6.1",
     "@types/prompts": "2.0.1",
     "ava": "2.2.0",
+    "nyc": "14.1.1",
+    "source-map-support": "0.5.12",
     "ts-node": "8.3.0",
     "typescript": "3.5.2"
   },
