--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src/*"]
+  "include": ["./src/*"],
+  "exclude": ["node_modules"]
 }
