--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "simple-git": "3.27.0"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "0.1.3",
-    "@types/node": "12.6.1",
+    "@istanbuljs/nyc-config-typescript": "1.0.2",
+    "@types/node": "22.13.5",
     "@types/prompts": "2.0.1",
-    "ava": "2.2.0",
-    "nyc": "14.1.1",
-    "source-map-support": "0.5.12",
-    "ts-node": "8.3.0",
+    "ava": "6.2.0",
+    "nyc": "17.1.0",
+    "source-map-support": "0.5.21",
+    "ts-node": "10.9.2",
     "typescript": "5.5.4"
   },
   "ava": {
@@ -41,5 +41,8 @@
     "require": [
       "ts-node/register"
     ]
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
